Fix get_wordlist infinite loop

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,7 @@ yew = { version="0.21", features=["csr"] }
 rand = "0.8"
 lazy_static = "1.5"
 gloo = { version = "0.11", features = ["storage", "net"] }
+gloo-console = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["HtmlInputElement"] }
-log = "0.4"
