--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ yew = { version="0.21", features=["csr"] }
 rand = "0.8"
 lazy_static = "1.5"
 gloo = { version = "0.11", features = ["storage", "net"] }
+gloo-net = "0.6"
 gloo-console = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["HtmlInputElement"] }
