Migrate to Forgejo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 edition = "2021"
 description = "A string randomizer inspired by V/Vm HelpAphexTwin4.0"
 readme = "README.md"
-repository = "https://github.com/thadah/v_vmifier"
+repository = "https://git.prisma.moe/Thadah/v_vmifier"
 license = "EUPL-1.2"
 keywords = ["yew", "trunk"]
 categories = ["gui", "wasm", "web-programming"]
